--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx ts-node-dev src/app.ts"
+    "dev": "npx ts-node-dev src/app.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,12 +20,15 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "jest": "^28.1.0",
     "mongoose": "^6.3.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97"
+    "@types/jest": "^27.5.0",
+    "@types/mongoose": "^5.11.97",
+    "supertest": "^6.2.3"
   }
 }
